8194746: (fs) Add equivalents of Paths.get to Path interface
Copy Paths.get() methods to Path.get() methods and have former call latter

Reviewed-by: alanb, forax, chegar, psandoz